feat: update lecture titles

--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -21,62 +21,63 @@ const day1 = [
     {
         title: "Craig Venter: Past, Present, and Future of Genomics",
         url: "https://www.youtube.com/embed/4HUYZb5ldbo",
-        distinguished: true,
+        distinguished_neumann: true,
     },
     {
         title: "Bonnie Berger: 21st Century Genomics Minimizer Space Computation",
         url: "https://www.youtube.com/embed/_i1_tlIfIUE",
-        distinguished: true,
+        distinguished_neumann: true,
     },
     {
         title: "Michael Kosterlitz: Topological Defects and Phase Transitions",
         url: "https://www.youtube.com/embed/oo9xu2NeWbo",
-        distinguished: false,
+        distinguished_neumann: false,
+        distinguished_ising: true,
     },
     {
         title: "Bill Camp: Never Make a Calculation Unless You Know the Answer",
         url: "https://www.youtube.com/embed/xro5jFtgxZo",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Henri Lucian: Sorin's Twenties' Jubilee",
         url: "https://www.youtube.com/embed/Bi8SFwvMUgk",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Andrea Califino: Defeating Cancer One Cell at a Time",
         url: "https://www.youtube.com/embed/zELuLxCLuFo",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Caleb Finch: Socio-economic Gradients of Development in Pathways of Aging",
         url: "https://www.youtube.com/embed/C3JMKhVgNW4",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Andy Clark: Allele-Specific Expression as a Pairwise Contest",
         url: "https://www.youtube.com/embed/FtueH0HzZAM",
-        distinguished: true,
+        distinguished_neumann: true,
     },
     {
         title: "Laxmi Parida: How, if not AI?",
         url: "https://www.youtube.com/embed/GWAlGIJmGLI",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Ernie Brickell: The Origin of Sorin's Computational Biology Research",
         url: "https://www.youtube.com/embed/equyDtelPak",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Bill Hart: Computational Protein Folding with Sorin",
         url: "https://www.youtube.com/embed/bbNoW8HExJo",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Franco Preparata: How it Began at Brown",
         url: "https://www.youtube.com/embed/H1O1PmgDaJs",
-        distinguished: false,
+        distinguished_neumann: false,
     },
 ];
 
@@ -84,82 +85,83 @@ const day2 = [
     {
         title: "Misha Gromov: Invisible Mathematics of Learning and Understanding",
         url: "https://www.youtube.com/embed/36v8uPjgcok",
-        distinguished: false,
+        distinguished_neumann: true,
+        distinguished_ising: false,
     },
     {
         title: "Jon Kleinberg: Transition, Mutation, and Fitness",
         url: "https://www.youtube.com/embed/ZcKaImj_tFU",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Ron Shamir: Algorithms for Multinomic Disease Data",
         url: "https://www.youtube.com/embed/FbogWhm5VXY",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Moshe Vardi: How to be an Ethical Computer Scientist",
         url: "https://www.youtube.com/embed/K-RT6Q9ircU",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Peter Shor: The Motzkin and Fredkin Quantum Spin Chains",
         url: "https://www.youtube.com/embed/i-dYnj4J1pA",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Bjarne Stroustrup: C++ Evolving a Useful Language",
         url: "https://www.youtube.com/embed/6jwOoIywnZE",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Ken Dill: The Molecular Origins of Life - The Protein Folding Problem all Over Again?",
         url: "https://www.youtube.com/embed/Ey0YSIBG-YU",
-        distinguished: true,
+        distinguished_neumann: true,
     },
     {
         title: "Gene Meyers: Sorting for Speed",
         url: "https://www.youtube.com/embed/ZqrYunUjoOY",
-        distinguished: true,
+        distinguished_neumann: true,
     },
     {
         title: "Pavel Pevzner: From Ulam's Problem to Sequence Alignment",
         url: "https://www.youtube.com/embed/aUmAVHosIos",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Liliana Florea: Unraveling the Combinatorial Design of Genes",
         url: "https://www.youtube.com/embed/YsCAAbT00DQ",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Giuseppe Lancia: Beating the Quadratic Algorithm",
         url: "https://www.youtube.com/embed/hqoJlzFtjg4",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Sridhar Hannenhalli - Prioritizing Non-Coding Mutations in Evolution and in Cancer",
         url: "https://www.youtube.com/embed/Qwi2_FU7D4k",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Jonathan Yewdell: Whither the MHC | Immunopeptidome?",
         url: "https://www.youtube.com/embed/p8uMvgOTGAo",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Jason Miller: Machine Learning and RNA-seq Alignment",
         url: "https://www.youtube.com/embed/Abaw6V8ed5I",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Daniel Fasulo: Type 2 Diabetes and the Gut Microbiome",
         url: "https://www.youtube.com/embed/FocPcxmWt4Q",
-        distinguished: false,
+        distinguished_neumann: false,
     },
     {
         title: "Sorin Istrail: My Family",
         url: "https://www.youtube.com/embed/ZE60C3nPtNc",
-        distinguished: false,
+        distinguished_neumann: false,
     },
 ];
 ---
@@ -172,31 +174,47 @@ const day2 = [
     <div class="p-4 grid gap-10">
         <img class="mx-auto" src={sorinFest} />
 
+        <Carousel client:only="react" images={jessePhotos} indicators />
+
         <div>
             <h3 class="text-left font-bold text-xl py-1">Day 1 Talks</h3>
             <div class="grid gap-1">
                 {
-                    day1.map(({ title, url, distinguished }) => (
-                        <div class="py-2">
-                            <div class="py-1">
-                                <h4 class="font-bold text-lg">{title}</h4>
-                                {distinguished && (
-                                    <h4 class="font-bold text-lg">
-                                        John von Neumann Distinguished Lecture
-                                    </h4>
-                                )}
+                    day1.map(
+                        ({
+                            title,
+                            url,
+                            distinguished_neumann,
+                            distinguished_ising,
+                        }) => (
+                            <div class="py-2">
+                                <div class="py-1">
+                                    <h4 class="font-bold text-lg">{title}</h4>
+                                    {distinguished_neumann && (
+                                        <h4 class="font-bold text-lg">
+                                            John von Neumann Distinguished
+                                            Lecture
+                                        </h4>
+                                    )}
+                                    {distinguished_ising && (
+                                        <h4 class="font-bold text-lg">
+                                            The Inaugural Ising-Onsager
+                                            Distinguished Lecture
+                                        </h4>
+                                    )}
+                                </div>
+                                <iframe
+                                    class="mx-auto"
+                                    width="560"
+                                    height="315"
+                                    src={url}
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                />
                             </div>
-                            <iframe
-                                class="mx-auto"
-                                width="560"
-                                height="315"
-                                src={url}
-                                frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen
-                            />
-                        </div>
-                    ))
+                        )
+                    )
                 }
             </div>
         </div>
@@ -205,27 +223,41 @@ const day2 = [
             <h3 class="text-left font-bold text-xl py-1">Day 2 Talks</h3>
             <div class="grid gap-1">
                 {
-                    day2.map(({ title, url, distinguished }) => (
-                        <div class="py-2">
-                            <div class="py-1">
-                                <h4 class="font-bold text-lg">{title}</h4>
-                                {distinguished && (
-                                    <h4 class="font-bold text-lg">
-                                        John von Neumann Distinguished Lecture
-                                    </h4>
-                                )}
+                    day2.map(
+                        ({
+                            title,
+                            url,
+                            distinguished_neumann,
+                            distinguished_ising,
+                        }) => (
+                            <div class="py-2">
+                                <div class="py-1">
+                                    <h4 class="font-bold text-lg">{title}</h4>
+                                    {distinguished_neumann && (
+                                        <h4 class="font-bold text-lg">
+                                            John von Neumann Distinguished
+                                            Lecture
+                                        </h4>
+                                    )}
+                                    {distinguished_ising && (
+                                        <h4 class="font-bold text-lg">
+                                            The Inaugural Ising-Onsager
+                                            Distinguished Lecture
+                                        </h4>
+                                    )}
+                                </div>
+                                <iframe
+                                    class="mx-auto"
+                                    width="560"
+                                    height="315"
+                                    src={url}
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen
+                                />
                             </div>
-                            <iframe
-                                class="mx-auto"
-                                width="560"
-                                height="315"
-                                src={url}
-                                frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen
-                            />
-                        </div>
-                    ))
+                        )
+                    )
                 }
             </div>
         </div>
