--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -205,7 +205,7 @@ const day2 = [
         <h3 class="text-lg font-bold">Day 2 Talks</h3>
         {day2.map(({ speaker }) => <Link href={`#${speaker}`}>{speaker}</Link>)}
         <h3 class="text-lg font-bold">Dinners</h3>
-        <Link href="#dinner0">Dinner 0</Link>
+        <Link href="#dinner0">Welcoming Dinner</Link>
         <Link href="#dinner1">Hope Club Dinner</Link>
         <Link href="#dinner2">Brown Faculty Club Dinner</Link>
     </aside>
@@ -315,7 +315,7 @@ const day2 = [
             <h3 class="font-bold text-xl py-1">Dinner Pictures</h3>
 
             <div class="grid py-2">
-                <h4 id="dinner0" class="font-bold text-lg py-1">Dinner 0</h4>
+                <h4 id="dinner0" class="font-bold text-lg py-1">Welcoming Dinner at Bayberry Garden</h4>
                 <Carousel client:only="react" images={dinner0} indicators />
 
                 <h4 id="dinner1" class="font-bold text-lg py-1">
