update lecture titles

--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -21,13 +21,13 @@ const jessePhotos = (
 
 const day1 = [
     {
-        title: "Craig Venter: Past, Present, and Future of Genomics",
+        title: "Craig Venter: Past, Present, and Future of Genomics with introduction by Mike Waterman",
         url: "https://www.youtube.com/embed/4HUYZb5ldbo",
         distinguished_neumann: true,
         speaker: "Craig Venter",
     },
     {
-        title: "Bonnie Berger: 21st Century Genomics Minimizer Space Computation",
+        title: "Bonnie Berger: 21st Century Genomics Minimizer Space Computation with introduction by Ritambhara Singh",
         url: "https://www.youtube.com/embed/_i1_tlIfIUE",
         distinguished_neumann: true,
         speaker: "Bonnie Berger",
@@ -147,7 +147,7 @@ const day2 = [
         speaker: "Bjarne Stroustrup",
     },
     {
-        title: "Ken Dill: The Molecular Origins of Life - The Protein Folding Problem all Over Again?",
+        title: "Ken Dill: The Molecular Origins of Life - The Protein Folding Problem all Over Again? with introduction by Brenda Rubenstein",
         url: "https://www.youtube.com/embed/Ey0YSIBG-YU",
         distinguished_neumann: true,
         speaker: "Ken Dill",
