add intro remaks

--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -21,6 +21,12 @@ const jessePhotos = (
 
 const day1 = [
     {
+        title: "Introductory Remarks: Sohini Ramachaandran and Roberto Tamassia",
+        url: "https://www.youtube.com/watch?v=QFdH2r9PMYE",
+        distinguished_neumann: false,
+        speaker: "Sohini Ramachandran and Roberto Tamassia",
+    },
+    {
         title: "Craig Venter: Past, Present, and Future of Genomics with introduction by Mike Waterman",
         url: "https://www.youtube.com/embed/4HUYZb5ldbo",
         distinguished_neumann: true,
