--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -2,6 +2,6 @@
     class="flex justify-center items-center p-4 bg-neutral text-neutral-content mt-20 text-sm"
 >
     <div class="items-center grid-flow-col">
-        <p>Copyright Istrail Lab © 2023 - All right reserved</p>
+        <p>Copyright Istrail Lab © 2024 - All rights reserved</p>
     </div>
 </footer>
