--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -84,7 +84,7 @@ const essays = [
         </div>
     </div>
 
-    <BlockQuote author="Sorin Istrail" journal="Vision For Brown">
+    <BlockQuote author="Sorin Istrail" journal="Vision For Brown University">
         Engaging the world, one inspiring course, one innovative student, one
         influential research leader at a time.
     </BlockQuote>
