minor edits to intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ images.reverse();
     </h2>
 
     <p class="text-sm md:text-lg pb-4">
-        The Istrail Lab is a computational biology and computer science research
+        The Istrail Laboratory is a computational biology and computer science research
         group in the Department of Computer Science at Brown University. It is
         part of the Center for Computational Molecular Biology at Brown
         University. Sorin Istrail is the James A. and Julie N. Brown Professor
