Marcel is the FIW

--- a/src/pages/games/father-in-law-vs-pajamas.astro
+++ b/src/pages/games/father-in-law-vs-pajamas.astro
@@ -21,4 +21,9 @@ const paper: Publication = {
         <img src={essayPicture} />
     </div>
     <EssayCard publication={paper} />
+
+
+    <p class="text-sm md:text-lg pb-4">
+        Marcel is the father in law in the problem
+    </p>
 </Layout>
