fixing sorinfest intro

--- a/src/pages/sorinfest.astro
+++ b/src/pages/sorinfest.astro
@@ -21,8 +21,8 @@ const jessePhotos = (
 
 const day1 = [
     {
-        title: "Introductory Remarks: Sohini Ramachaandran and Roberto Tamassia",
-        url: "https://www.youtube.com/watch?v=QFdH2r9PMYE",
+        title: "Introductory Remarks: Sohini Ramachandran and Roberto Tamassia",
+        url: "https://youtube.com/embed/QFdH2r9PMYE",
         distinguished_neumann: false,
         speaker: "Sohini Ramachandran and Roberto Tamassia",
     },
