--- a/src/pages/research/assemblies.astro
+++ b/src/pages/research/assemblies.astro
@@ -15,7 +15,7 @@ const relevantPapers = publications.filter((paper) =>
     <div slot="abstract" class="grid gap-4">
         <Abstract
             client:load
-            blurb={`The important American oyster Crassostrea virginica, an ecologically and
+            blurb={`The American oyster Crassostrea virginica, an ecologically and
                 economically important estuarine organism, can suffer high
                 mortalities in areas in the Northeast United States due to
                 Roseovarius Oyster Disease (ROD), caused by the gram-negative
